--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="UTF-8">
 		<title>About Python</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 		<div id="container">
 			<div id="header">
-				<img src="python.png">
+				<img src="python.png" alt="python-banner">
 				<div id="search">
-					<p>Text Size: <a href="http://www.python.com/normal";>Normal</a><span> | </span><a href="http://www.python.com/large";>Large</a></p>
+					<p>Text Size: <a href="http://www.python.com/normal">Normal</a><span> | </span><a href="http://www.python.com/large">Large</a></p>
 					<div id="searchbar">
 						<input type="text" placeholder="Search">
 						<button type="submit" class="button">Go</button>
-					</div>	
+					</div>
 				</div>
-				<div id="navbar">
-					<a href="http://www.python.com/about";>About</a>
-					<a href="http://www.python.com/downloads";>Downloads</a>
-					<a href="http://www.python.com/documentation";>Documentation</a>
-					<a href="http://www.python.com/community";>Community</a>
-					<a href="http://www.python.com/news";>News</a>
-					<a href="http://www.python.com/events";>Events</a>
-				</div>
-			
 				<div id="nav">
+					<a href="http://www.python.com/about">About</a>
+					<a href="http://www.python.com/downloads">Downloads</a>
+					<a href="http://www.python.com/documentation">Documentation</a>
+					<a href="http://www.python.com/community">Community</a>
+					<a href="http://www.python.com/news">News</a>
+					<a href="http://www.python.com/events">Events</a>
+				</div>
+				<div id="side-nav">
 					<ul>
 						<li>Docs</li>
 						<li>Audio/Visual Talks</li>
@@ -55,28 +55,28 @@
 				<h3>Getting Started</h3>
 				<p>Python can be easy to pick up whether you're a first time programmer or you're experienced with other languages. The following pages are a useful first step to get on your way writing programs with Python!</p>
 				<ul>
-					<li><a href="http://www.python.com/beginners_guide_programmers";>Beginner's Guide Programmers</a></li>
-					<li><a href="http://www.python.com/beginners_guide_nonprogrammers";>Beginner's Guide Non-Programmers</a></li>
-					<li><a href="http://www.python.com/code_sample";>Code sample and snippets for Beginners</a></li>
-				<ul>
+					<li><a href="http://www.python.com/beginners_guide_programmers">Beginner's Guide Programmers</a></li>
+					<li><a href="http://www.python.com/beginners_guide_nonprogrammers">Beginner's Guide Non-Programmers</a></li>
+					<li><a href="http://www.python.com/code_sample">Code sample and snippets for Beginners</a></li>
+				</ul>
 			</div>
 			<div class="content">
 				<h3>Application</h3>
-				<p>The <a href="http://www.python.com/pypi";>Python Package Index (PyPI)</a> hosts thousands of third-party modules for Python. Both Python's standard library and the community-contributed modules allow for endless possibilities.</p>
+				<p>The <a href="http://www.python.com/pypi">Python Package Index (PyPI)</a> hosts thousands of third-party modules for Python. Both Python's standard library and the community-contributed modules allow for endless possibilities.</p>
 				<ul>
-					<li><a href="http://www.python.com/web_and_internet_dev";>Web and Internet Development</a></li>
-					<li><a href="http://www.python.com/db_access";>Database Access</a></li>
-					<li><a href="http://www.python.com/desktop_guis";>Desktop GUIs</a></li>
-					<li><a href="http://www.python.com/net_pro";>Network Programming</a></li>
-					<li><a href="http://www.python.com/software_and_game_dev";>Software and Game Development</a></li>
-				<ul>
+					<li><a href="http://www.python.com/web_and_internet_dev">Web and Internet Development</a></li>
+					<li><a href="http://www.python.com/db_access">Database Access</a></li>
+					<li><a href="http://www.python.com/desktop_guis">Desktop GUIs</a></li>
+					<li><a href="http://www.python.com/net_pro">Network Programming</a></li>
+					<li><a href="http://www.python.com/software_and_game_dev">Software and Game Development</a></li>
+				</ul>
 			</div>
 		</div>
 		<div id="footer">
 			<div id="botnav">
-				<a href="http://www.python.com/help";>Help and General Contact</a>
-				<a href="http://www.python.com/div_int";>Diversity Initiatives</a>
-				<a href="http://www.python.com/sub_web_bug";>Submit Website Bugs</a>
+				<a href="http://www.python.com/help">Help and General Contact</a>
+				<a href="http://www.python.com/div_int">Diversity Initiatives</a>
+				<a href="http://www.python.com/sub_web_bug">Submit Website Bugs</a>
 			</div>
 			<p>Copyright 2001-2016</p>
 		</div>
